jdbc: allow denomination from version table, query builder: allow join clause, div refactorings.